added a simple markup

--- a/src/app/cources/cource-list/cource-list.component.html
+++ b/src/app/cources/cource-list/cource-list.component.html
@@ -1,7 +1,8 @@
-<div>
-  <p>cource-list works!</p>
-  <cource-search></cource-search>
-  <cource></cource>
+<div class="cource-list">
+  <div class="container">
+    <cource-search></cource-search>
+    <button class="btn cource-list__add-cource">Add cource</button>
+    <cource></cource>
+
+  </div>
 </div>
-
-
