--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -1,5 +1,20 @@
-<div>
-  <app-logo></app-logo>
-  <p>header works!</p>
+
+<div class="header">
+  <div class="container">
+    <div class="header__items">
+      <app-logo></app-logo>
+      <div class="header__login">
+        <div class="header__login-item">
+          <img class="header__login-img" src="../../../assets/login/login.svg" alt="login">
+          <div class="header__login-text">User login</div>
+        </div>
+        <div class="header__login-item">
+          <img class="header__login-img" src="../../../assets/login/logoff.svg" alt="logoff">
+          <div class="header__login-text">Log Off</div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
 
