--- a/src/app/elements/logo/logo.component.html
+++ b/src/app/elements/logo/logo.component.html
@@ -1,1 +1,4 @@
-<p>logo works!</p>
+<div class="logo">
+  <img class="logo__img" src="../../../assets/logo/play-button.png" alt="logo">
+  <div class="logo__text">video course</div>
+</div>
