--- a/src/app/cources/cource-search/cource-search.component.html
+++ b/src/app/cources/cource-search/cource-search.component.html
@@ -1,1 +1,4 @@
-<p>cource-search works!</p>
+<div class="search">
+  <input class="search__input" type="text">
+  <button class="btn btn__submit" >Search</button>
+</div>
