--- a/src/app/elements/footer/footer.component.html
+++ b/src/app/elements/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="footer">
+  <div class="container">
+    <div class="footer__text">Copyrignt @Videocourcses. All rights reserved</div>
+  </div>
+</div>
