--- a/src/app/cources/cource-search/cource-search.component.html
+++ b/src/app/cources/cource-search/cource-search.component.html
@@ -1,4 +1,4 @@
 <div class="search">
-  <input class="search__input" type="text">
-  <button class="btn btn__submit" >Search</button>
+  <input class="search__input" type="text" [(ngModel)]="searchText">
+  <button (click)="search()" class="btn btn__submit" >Search</button>
 </div>
