--- a/src/app/cources/cource/cource.component.html
+++ b/src/app/cources/cource/cource.component.html
@@ -1,18 +1,16 @@
 <div class="cource">
   <div class="cource__data">
     <div class="cource__title">
-      <h2>Video Cource 1.Name tag</h2>
+      <h2>{{cource?.title}}</h2>
       <div class="cource__date-info">
-        <div class="cource__duration">1h 28min</div>
-        <div class="cource__date">9 Nov, 2018</div>
+        <div class="cource__duration">{{cource?.duration}}</div>
+        <div class="cource__date">{{cource?.simpleDate}}</div>
       </div>
     </div>
-    <div class="cource__descr">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum aliquam expedita itaque odio optio sed molestias, quaerat quibusdam dolorem error voluptas facilis temporibus, dignissimos tempora maiores saepe deserunt velit non!
-    Ullam omnis facere quisquam sit ratione nulla dolorum. Architecto harum maiores quaerat. Neque nisi est facilis numquam omnis id, tenetur dignissimos pariatur sit repellendus consectetur recusandae ipsa ipsam maxime deserunt?
-    Architecto, rem eaque aperiam doloribus possimus ullam consequuntur iure unde sunt magni, error numquam sit et voluptate deserunt consequatur dignissimos pariatur nulla, blanditiis perspiciatis sed! Voluptates porro itaque soluta quia.</div>
+    <div class="cource__descr">{{cource?.description}}</div>
   </div>
   <div class="cource__actions">
     <button class="btn btn__simple">Edit</button>
-    <button class="btn btn__simple">Delete</button>
+    <button class="btn btn__simple" (click)="delete(cource?.id)">Delete</button>
   </div>
 </div>
