--- a/src/app/elements/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/elements/breadcrumbs/breadcrumbs.component.html
@@ -1,7 +1,7 @@
 <div class="breadcrumbs">
   <div class="container">
     <div class="breadcrumbs__text">
-      Cource
+      {{currentText}}
     </div>
   </div>
 </div>
