simple tests have been added

--- a/src/app/cources/cource/cource.component.html
+++ b/src/app/cources/cource/cource.component.html
@@ -4,7 +4,7 @@
       <h2>{{cource?.title}}</h2>
       <div class="cource__date-info">
         <div class="cource__duration">{{cource?.duration}}</div>
-        <div class="cource__date">{{cource?.simpleDate}}</div>
+        <div class="cource__date">{{cource?.creationDate}}</div>
       </div>
     </div>
     <div class="cource__descr">{{cource?.description}}</div>
