--- a/src/app/cources/cource-list/cource-list.component.scss
+++ b/src/app/cources/cource-list/cource-list.component.scss
@@ -20,4 +20,12 @@
     margin: 0 auto;
     text-transform: uppercase;
   }
+  &__empty{
+    text-align: center;
+    padding: 35px 25px;
+    background-color: white;
+    border-radius: 15px;
+    margin-top: 20px;
+    text-transform: uppercase;
+  }
 }
