--- a/src/app/cources/cource/cource.component.scss
+++ b/src/app/cources/cource/cource.component.scss
@@ -5,6 +5,9 @@
   background-color: white;
   border-radius: 15px;
   margin-top: 20px;
+  &_topRated{
+    background-color:rgba(221, 250, 204, 0.959)
+  }
   &__data{
     display: flex;
     flex-direction: column;
@@ -16,7 +19,7 @@
     align-items: center;
   }
   &__date-info{
-    width: 60px;
+    width: 135px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -29,5 +32,12 @@
   }
   &__descr{
     padding-top: 10px;
+  }
+  &__header{
+    display: flex;
+  }
+  &__rate{
+    margin-left: 7px;
+    width: 20px;
   }
 }
