--- a/src/app/cources/cource/cource.component.scss
+++ b/src/app/cources/cource/cource.component.scss
@@ -16,10 +16,10 @@
   &__title{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
   }
   &__date-info{
-    width: 135px;
+    width: 255px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -33,11 +33,31 @@
   &__descr{
     padding-top: 10px;
   }
-  &__header{
+  &__duration{
     display: flex;
+    align-items: center;
+    &::before{
+      content: url('../../../assets/icons/clock.svg');
+      width: 20px;
+      margin-right: 5px;
+    }
+  }
+  &__date{
+    display: flex;
+    align-items: center;
+    &::before{
+      content: url('../../../assets/icons/date.svg');
+      width: 20px;
+      margin-right: 5px;
+    }
   }
   &__rate{
-    margin-left: 7px;
-    width: 20px;
+    &::after{
+      margin-left: 10px;
+      display:inline-block;
+      vertical-align: middle;
+      content: url('../../../assets/icons/star.svg');
+      width: 20px;
+    }
   }
 }
