--- a/src/app/cources/cource/cource.component.html
+++ b/src/app/cources/cource/cource.component.html
@@ -11,6 +11,6 @@
   </div>
   <div class="cource__actions">
     <button class="btn btn__simple">Edit</button>
-    <button class="btn btn__simple" (click)="delete(cource?.id)">Delete</button>
+    <button class="btn btn__simple" (click)="delete()">Delete</button>
   </div>
 </div>
