--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -3,8 +3,8 @@
   <div class="container">
     <div class="header__items">
       <app-logo></app-logo>
-      <div class="header__login">
-        <div class="header__login-item">
+      <div *IfAuthenticatedShow='false' class="header__login">
+        <div  class="header__login-item">
           <img class="header__login-img" src="../../../assets/login/login.svg" alt="login">
           <div class="header__login-text">User login</div>
         </div>
