change auth behavior

--- a/src/app/core/Auth/login-page/login-page.component.html
+++ b/src/app/core/Auth/login-page/login-page.component.html
@@ -2,14 +2,14 @@
   <h1 class="login__title">Login</h1>
   <label for="" class="login__form">
     <div class="login__form-title">E-mail</div>
-    <input type="text" placeholder="Enter email"  [(ngModel)]="userLogin">
+    <input required type="text" placeholder="Enter email"  [(ngModel)]="userLogin">
   </label>
   <label for="" class="login__form">
     <div class="login__form-title">Password</div>
-    <input type="password" placeholder="Enter password"  [(ngModel)]="userPassword">
+    <input required type="password" placeholder="Enter password"  [(ngModel)]="userPassword">
   </label>
   <div class="login__actions">
     <a href="javascript: void(0);" class="login__fogot-link">Fogot password</a>
-    <button (click)="login()" class="btn btn_login-btn">Login</button>
+    <button type="submit" (click)="login()" class="btn btn_login-btn">Login</button>
   </div>
 </div>
