--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -4,11 +4,11 @@
     <div class="header__items">
       <app-logo></app-logo>
       <div *IfAuthenticatedShow='false' class="header__login">
-        <div  class="header__login-item">
-          <img class="header__login-img" src="../../../assets/login/login.svg" alt="login">
-          <div class="header__login-text">User login</div>
-        </div>
         <div class="header__login-item">
+          <img class="header__login-img" src="../../../assets/login/login.svg" alt="login">
+          <div class="header__login-text">{{getUserInfo()}}</div>
+        </div>
+        <div class="header__login-item header__logoff" (click)="logoff()">
           <img class="header__login-img" src="../../../assets/login/logoff.svg" alt="logoff">
           <div class="header__login-text">Log Off</div>
         </div>
