--- a/src/app/elements/header/header.component.scss
+++ b/src/app/elements/header/header.component.scss
@@ -4,6 +4,9 @@
   width: 100%;
   height: 50px;
   background-color: rgb(27, 26, 26);
+  &__logoff{
+    cursor: pointer;
+  }
   &__items {
     padding: 10px 0;
     display: flex;
