--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,7 @@ html{
   border: none;
   border-radius: 2px;
   cursor: pointer;
+  padding: 5px;
 
   &:active{
     border: 1px solid black;
@@ -54,5 +55,27 @@ html{
   right: 0;
   left: 0;
   background: rgba(0, 0 ,0, .3);
+}
+
+.app__input{
+  input, textarea {
+    width: 90%;
+    margin-top: 10px;
+    padding: 10px;
+  }
+  input{
+    height: 20px;
+
+  }
+  .small_input{
+    width: 30%;
+  }
+  .adv_input{
+    width: 50%;
+  }
+}
+
+textarea {
+  resize: none;
 }
 
