--- a/src/app/cources/add-cource/add-cource.component.html
+++ b/src/app/cources/add-cource/add-cource.component.html
@@ -1,5 +1,5 @@
 <div class="cource-add-windows">
-  <h2 class="cource-add-windows__title">New cource</h2>
+  <h2 class="cource-add-windows__title">{{header}}</h2>
   <div class="cource-add-windows__element">
     <label class="app__input" for="">
       <div class="app__input-title">Title:</div>
