--- a/src/app/cources/cource/cource.component.html
+++ b/src/app/cources/cource/cource.component.html
@@ -10,7 +10,7 @@
     <div class="cource__descr">{{cource?.description}}</div>
   </div>
   <div class="cource__actions">
-    <button class="btn btn__simple">Edit</button>
+    <button class="btn btn__simple" (click)="edit()">Edit</button>
     <button class="btn btn__simple" (click)="delete()">Delete</button>
   </div>
 </div>
