--- a/src/app/cources/cource-list/cource-list.component.html
+++ b/src/app/cources/cource-list/cource-list.component.html
@@ -1,10 +1,9 @@
 
 <confirmation-dialog *ngIf='isDeleteModalShow' (decline)="closeDeleteModal()" (confirm)="confirmDeleteAction()"></confirmation-dialog>
-<add-cource *ngIf='isShowAdd' (onClose)="onAddWindowClose()"></add-cource>
-<div *ngIf='isShowList' class="cource-list">
+<div  class="cource-list">
   <div class="container">
     <cource-search (onSearch)="searchCources($event)" ></cource-search>
-    <button class="btn cource-list__add-cource" (click)="addCource()">Add cource</button>
+    <button class="btn cource-list__add-cource" (click)="addCource()" >Add cource</button>
     <div *ngIf="isNotEmptyList(); then cources else emptyCources"></div>
     <ng-template #cources>
       <cource (deleteCource)="onDeleteCource($event)"  *ngFor="let cource of getCourceList() | courceSort; trackBy: trackById" [cource]="cource">
