--- a/src/app/cources/cource/cource.component.html
+++ b/src/app/cources/cource/cource.component.html
@@ -1,10 +1,10 @@
-<div [appCourceHighlight] ='cource!.creationDate' [ngClass]="cource?.istopRate ? 'cource_topRated' : '' " class="cource">
+<div [appCourceHighlight] ='cource!.date' [ngClass]="cource?.isTopRated ? 'cource_topRated' : '' " class="cource">
   <div class="cource__data">
     <div class="cource__title">
-      <h2 class="cource__header" [ngClass]="{cource__rate : cource?.istopRate}">{{cource?.title | uppercase}}</h2>
+      <h2 class="cource__header" [ngClass]="{cource__rate : cource?.isTopRated}">{{cource?.name | uppercase}}</h2>
       <div class="cource__date-info">
-        <div class="cource__duration">{{cource!.duration | duration}}</div>
-        <div class="cource__date">{{cource?.creationDate | date:'d MMM y'}}</div>
+        <div class="cource__duration">{{cource!.length | duration}}</div>
+        <div class="cource__date">{{cource?.date | date:'d MMM y'}}</div>
       </div>
     </div>
     <div class="cource__descr">{{cource?.description}}</div>
