--- a/src/app/cources/cource-search/cource-search.component.html
+++ b/src/app/cources/cource-search/cource-search.component.html
@@ -1,4 +1,3 @@
 <div class="search">
-  <input [(ngModel)]="searchText" class="search__input" type="text">
-  <button (click)="search()" class="btn btn__submit" >Search</button>
+  <input [(ngModel)]="searchText"  (keyup)="onKey($event)" placeholder="Search text" class="search__input" type="text">
 </div>
