rewrite auth with redux

--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -6,7 +6,7 @@
       <div *IfAuthenticatedShow='false' class="header__login">
         <div class="header__login-item">
           <img class="header__login-img" src="../../../assets/login/login.svg" alt="login">
-          <div class="header__login-text">{{getUserInfo()}}</div>
+          <div class="header__login-text">{{getUserInfo() | async}}</div>
         </div>
         <div class="header__login-item header__logoff" (click)="logoff()">
           <img class="header__login-img" src="../../../assets/login/logoff.svg" alt="logoff">
