loader has been added

--- a/src/app/elements/loading/loading.component.html
+++ b/src/app/elements/loading/loading.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="isLoaded" class="overlay">
+<div *ngIf="isLoaded$ | async" class="overlay">
   <div class="overlay__spinner">Loading...</div>
 </div>
