task has been done

--- a/src/app/cources/cource-list/cource-list.component.html
+++ b/src/app/cources/cource-list/cource-list.component.html
@@ -1,12 +1,16 @@
 
-<confirmation-dialog *ngIf='isDeleteModalShow' (decline)="closeDeleteModal()" (confirm)="confirmDeleteAction()"></confirmation-dialog>
+<confirmation-dialog
+  *ngIf='isDeleteModalShowed$ | async'
+  (decline)="closeDeleteModal()"
+  (confirm)="confirmDeleteAction()"
+  title="Do you really want to delete this cource?"></confirmation-dialog>
 <div  class="cource-list">
   <div class="container">
     <cource-search (onSearch)="searchCources($event)" ></cource-search>
     <button class="btn cource-list__add-cource" (click)="addCource()" >Add cource</button>
-    <div *ngIf="isNotEmptyList(); then cources else emptyCources"></div>
+    <div *ngIf="isCourceListEmpty$ | async ; then cources else emptyCources"></div>
     <ng-template #cources>
-      <cource (deleteCource)="onDeleteCource($event)"  *ngFor="let cource of videoCources; trackBy: trackById" [cource]="cource">
+      <cource (deleteCource)="onDeleteCource($event)"  *ngFor="let cource of courcesList$ | async; trackBy: trackById" [cource]="cource">
       </cource>
       <div class="cource-list__more">
           <a href="javascript: void(0);" (click)="loadMore()" class="cource-list__more-link">{{pagingText}}</a>
